--- a/classes/_motors_.motorbase.html
+++ b/classes/_motors_.motorbase.html
@@ -150,7 +150,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:13</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L13">motors.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -181,7 +181,7 @@
 					<div class="tsd-signature tsd-kind-icon">_device<wbr>Index<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in motors.ts:10</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L10">motors.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -231,7 +231,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:11</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L11">motors.ts:11</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -555,7 +555,7 @@
 						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_platform_ev3_.html">"platform-<wbr>ev3"</a>
+						<a href="../modules/_index_.html">"index"</a>
 					</li>
 					<li class="label tsd-is-external">
 						<span>Externals</span>
