--- a/classes/_sensors_.touchsensor.html
+++ b/classes/_sensors_.touchsensor.html
@@ -158,7 +158,7 @@
 							<aside class="tsd-sources">
 								<p>Overwrites <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in sensors.ts:156</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L156">sensors.ts:156</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -184,7 +184,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_sensors_.sensorbase.html">SensorBase</a>.<a href="_sensors_.sensorbase.html#_deviceindex">_deviceIndex</a></p>
 						<ul>
-							<li>Defined in sensors.ts:5</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L5">sensors.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -235,7 +235,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#command">command</a></p>
 								<ul>
-									<li>Defined in sensors.ts:73</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L73">sensors.ts:73</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -264,7 +264,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#commands">commands</a></p>
 								<ul>
-									<li>Defined in sensors.ts:81</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L81">sensors.ts:81</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -288,7 +288,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#decimals">decimals</a></p>
 								<ul>
-									<li>Defined in sensors.ts:89</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L89">sensors.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -312,7 +312,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensorbase.html">SensorBase</a>.<a href="_sensors_.sensorbase.html#deviceindex">deviceIndex</a></p>
 								<ul>
-									<li>Defined in sensors.ts:6</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L6">sensors.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -330,7 +330,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#drivername">driverName</a></p>
 								<ul>
-									<li>Defined in sensors.ts:97</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L97">sensors.ts:97</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -355,7 +355,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#mode">mode</a></p>
 								<ul>
-									<li>Defined in sensors.ts:105</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L105">sensors.ts:105</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -370,7 +370,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#mode">mode</a></p>
 								<ul>
-									<li>Defined in sensors.ts:112</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L112">sensors.ts:112</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -400,7 +400,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#modes">modes</a></p>
 								<ul>
-									<li>Defined in sensors.ts:119</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L119">sensors.ts:119</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -423,7 +423,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#numvalues">numValues</a></p>
 								<ul>
-									<li>Defined in sensors.ts:127</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L127">sensors.ts:127</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -447,7 +447,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#portname">portName</a></p>
 								<ul>
-									<li>Defined in sensors.ts:135</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L135">sensors.ts:135</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -471,7 +471,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#units">units</a></p>
 								<ul>
-									<li>Defined in sensors.ts:143</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L143">sensors.ts:143</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -560,7 +560,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#getfloatvalue">getFloatValue</a></p>
 								<ul>
-									<li>Defined in sensors.ts:64</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L64">sensors.ts:64</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -584,7 +584,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensor.html">Sensor</a>.<a href="_sensors_.sensor.html#getvalue">getValue</a></p>
 								<ul>
-									<li>Defined in sensors.ts:60</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L60">sensors.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -849,7 +849,7 @@
 						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_platform_ev3_.html">"platform-<wbr>ev3"</a>
+						<a href="../modules/_index_.html">"index"</a>
 					</li>
 					<li class="label tsd-is-external">
 						<span>Externals</span>
