--- a/modules/_sensors_.html
+++ b/modules/_sensors_.html
@@ -94,7 +94,7 @@
 						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_platform_ev3_.html">"platform-<wbr>ev3"</a>
+						<a href="_index_.html">"index"</a>
 					</li>
 					<li class="label tsd-is-external">
 						<span>Externals</span>
