--- a/classes/_motors_.dcmotor.html
+++ b/classes/_motors_.dcmotor.html
@@ -162,7 +162,7 @@
 							<aside class="tsd-sources">
 								<p>Overwrites <a href="_motors_.motorbase.html">MotorBase</a>.<a href="_motors_.motorbase.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in motors.ts:544</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L544">motors.ts:544</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -185,7 +185,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_motors_.motorbase.html">MotorBase</a>.<a href="_motors_.motorbase.html#_deviceindex">_deviceIndex</a></p>
 						<ul>
-							<li>Defined in motors.ts:10</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L10">motors.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -235,7 +235,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:560</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L560">motors.ts:560</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -265,7 +265,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:568</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L568">motors.ts:568</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -289,7 +289,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_motors_.motorbase.html">MotorBase</a>.<a href="_motors_.motorbase.html#deviceindex">deviceIndex</a></p>
 								<ul>
-									<li>Defined in motors.ts:11</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L11">motors.ts:11</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -306,7 +306,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:576</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L576">motors.ts:576</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -329,7 +329,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:584</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L584">motors.ts:584</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -353,7 +353,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:593</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L593">motors.ts:593</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -368,7 +368,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:601</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L601">motors.ts:601</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -399,7 +399,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:608</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L608">motors.ts:608</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -412,7 +412,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:614</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L614">motors.ts:614</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -440,7 +440,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:621</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L621">motors.ts:621</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -463,7 +463,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:629</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L629">motors.ts:629</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -477,7 +477,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:636</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L636">motors.ts:636</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -507,7 +507,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:644</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L644">motors.ts:644</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -521,7 +521,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:651</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L651">motors.ts:651</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -550,7 +550,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:661</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L661">motors.ts:661</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -575,7 +575,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:669</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L669">motors.ts:669</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -604,7 +604,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:677</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L677">motors.ts:677</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -628,7 +628,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:686</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L686">motors.ts:686</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -643,7 +643,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in motors.ts:694</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/motors.ts#L694">motors.ts:694</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -980,7 +980,7 @@
 						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_platform_ev3_.html">"platform-<wbr>ev3"</a>
+						<a href="../modules/_index_.html">"index"</a>
 					</li>
 					<li class="label tsd-is-external">
 						<span>Externals</span>
