--- a/classes/_sensors_.sensor.html
+++ b/classes/_sensors_.sensor.html
@@ -177,7 +177,7 @@
 							<aside class="tsd-sources">
 								<p>Overwrites <a href="_sensors_.sensorbase.html">SensorBase</a>.<a href="_sensors_.sensorbase.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in sensors.ts:51</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L51">sensors.ts:51</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -203,7 +203,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_sensors_.sensorbase.html">SensorBase</a>.<a href="_sensors_.sensorbase.html#_deviceindex">_deviceIndex</a></p>
 						<ul>
-							<li>Defined in sensors.ts:5</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L5">sensors.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -253,7 +253,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:73</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L73">sensors.ts:73</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -281,7 +281,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:81</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L81">sensors.ts:81</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -304,7 +304,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:89</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L89">sensors.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -328,7 +328,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_sensors_.sensorbase.html">SensorBase</a>.<a href="_sensors_.sensorbase.html#deviceindex">deviceIndex</a></p>
 								<ul>
-									<li>Defined in sensors.ts:6</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L6">sensors.ts:6</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
@@ -345,7 +345,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:97</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L97">sensors.ts:97</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -369,7 +369,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:105</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L105">sensors.ts:105</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -383,7 +383,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:112</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L112">sensors.ts:112</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -412,7 +412,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:119</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L119">sensors.ts:119</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -434,7 +434,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:127</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L127">sensors.ts:127</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -457,7 +457,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:135</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L135">sensors.ts:135</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -480,7 +480,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:143</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L143">sensors.ts:143</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -568,7 +568,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:64</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L64">sensors.ts:64</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -591,7 +591,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in sensors.ts:60</li>
+									<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/sensors.ts#L60">sensors.ts:60</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -856,7 +856,7 @@
 						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_platform_ev3_.html">"platform-<wbr>ev3"</a>
+						<a href="../modules/_index_.html">"index"</a>
 					</li>
 					<li class="label tsd-is-external">
 						<span>Externals</span>
