--- a/globals.html
+++ b/globals.html
@@ -72,9 +72,9 @@
 							<h3>External modules</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_extras_.html" class="tsd-kind-icon">"extras"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_index_.html" class="tsd-kind-icon">"index"</a></li>
 								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_io_.html" class="tsd-kind-icon">"io"</a></li>
 								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_motors_.html" class="tsd-kind-icon">"motors"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_platform_ev3_.html" class="tsd-kind-icon">"platform-<wbr>ev3"</a></li>
 								<li class="tsd-kind-external-module tsd-is-external"><a href="modules/_sensors_.html" class="tsd-kind-icon">"sensors"</a></li>
 							</ul>
 						</section>
@@ -92,7 +92,7 @@
 						<span>Internals</span>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_platform_ev3_.html">"platform-<wbr>ev3"</a>
+						<a href="modules/_index_.html">"index"</a>
 					</li>
 					<li class="label tsd-is-external">
 						<span>Externals</span>
