--- a/modules/_index_.html
+++ b/modules/_index_.html
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">DCMotor<span class="tsd-signature-symbol">:</span> <a href="../classes/_motors_.dcmotor.html" class="tsd-signature-type">DCMotor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:30</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L30">index.ts:30</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">Device<span class="tsd-signature-symbol">:</span> <a href="../classes/_io_.device.html" class="tsd-signature-type">Device</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:26</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L26">index.ts:26</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -130,7 +130,7 @@
 					<div class="tsd-signature tsd-kind-icon">I2CSensor<span class="tsd-signature-symbol">:</span> <a href="../classes/_sensors_.i2csensor.html" class="tsd-signature-type">I2CSensor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:38</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L38">index.ts:38</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -140,7 +140,7 @@
 					<div class="tsd-signature tsd-kind-icon">INPUT_<wbr>1<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:15</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L15">index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -150,7 +150,7 @@
 					<div class="tsd-signature tsd-kind-icon">INPUT_<wbr>2<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:16</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L16">index.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -160,7 +160,7 @@
 					<div class="tsd-signature tsd-kind-icon">INPUT_<wbr>3<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:17</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L17">index.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -170,7 +170,7 @@
 					<div class="tsd-signature tsd-kind-icon">INPUT_<wbr>4<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:18</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L18">index.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,7 +180,7 @@
 					<div class="tsd-signature tsd-kind-icon">INPUT_<wbr>AUTO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:12</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L12">index.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -190,7 +190,7 @@
 					<div class="tsd-signature tsd-kind-icon">LED<span class="tsd-signature-symbol">:</span> <a href="../classes/_extras_.led.html" class="tsd-signature-type">LED</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:43</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L43">index.ts:43</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -200,7 +200,7 @@
 					<div class="tsd-signature tsd-kind-icon">Large<wbr>Motor<span class="tsd-signature-symbol">:</span> <a href="../classes/_motors_.largemotor.html" class="tsd-signature-type">LargeMotor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:31</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L31">index.ts:31</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -210,7 +210,7 @@
 					<div class="tsd-signature tsd-kind-icon">Lego<wbr>Port<span class="tsd-signature-symbol">:</span> <a href="../classes/_extras_.legoport.html" class="tsd-signature-type">LegoPort</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:44</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L44">index.ts:44</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -220,7 +220,7 @@
 					<div class="tsd-signature tsd-kind-icon">Medium<wbr>Motor<span class="tsd-signature-symbol">:</span> <a href="../classes/_motors_.mediummotor.html" class="tsd-signature-type">MediumMotor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:32</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L32">index.ts:32</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -230,7 +230,7 @@
 					<div class="tsd-signature tsd-kind-icon">Motor<span class="tsd-signature-symbol">:</span> <a href="../classes/_motors_.motor.html" class="tsd-signature-type">Motor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:29</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L29">index.ts:29</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -240,7 +240,7 @@
 					<div class="tsd-signature tsd-kind-icon">Motor<wbr>Speed<wbr>Sp<span class="tsd-signature-symbol">:</span> <a href="../classes/_motors_.motorspeedsp.html" class="tsd-signature-type">MotorSpeedSp</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:33</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L33">index.ts:33</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -250,7 +250,7 @@
 					<div class="tsd-signature tsd-kind-icon">OUTPUT_<wbr>A<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:20</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L20">index.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -260,7 +260,7 @@
 					<div class="tsd-signature tsd-kind-icon">OUTPUT_<wbr>AUTO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:13</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L13">index.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -270,7 +270,7 @@
 					<div class="tsd-signature tsd-kind-icon">OUTPUT_<wbr>B<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:21</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L21">index.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -280,7 +280,7 @@
 					<div class="tsd-signature tsd-kind-icon">OUTPUT_<wbr>C<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:22</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L22">index.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -290,7 +290,7 @@
 					<div class="tsd-signature tsd-kind-icon">OUTPUT_<wbr>D<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:23</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L23">index.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -300,7 +300,7 @@
 					<div class="tsd-signature tsd-kind-icon">Power<wbr>Supply<span class="tsd-signature-symbol">:</span> <a href="../classes/_extras_.powersupply.html" class="tsd-signature-type">PowerSupply</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:42</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L42">index.ts:42</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -310,7 +310,7 @@
 					<div class="tsd-signature tsd-kind-icon">Sensor<span class="tsd-signature-symbol">:</span> <a href="../classes/_sensors_.sensor.html" class="tsd-signature-type">Sensor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:37</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L37">index.ts:37</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -320,7 +320,7 @@
 					<div class="tsd-signature tsd-kind-icon">Servo<wbr>Motor<span class="tsd-signature-symbol">:</span> <a href="../classes/_motors_.servomotor.html" class="tsd-signature-type">ServoMotor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:34</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L34">index.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -330,7 +330,7 @@
 					<div class="tsd-signature tsd-kind-icon">Touch<wbr>Sensor<span class="tsd-signature-symbol">:</span> <a href="../classes/_sensors_.touchsensor.html" class="tsd-signature-type">TouchSensor</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in index.ts:39</li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L39">index.ts:39</a></li>
 						</ul>
 					</aside>
 				</section>
